--- a/package.json
+++ b/package.json
@@ -22,9 +22,12 @@
   "dependencies": {
     "@nestjs/common": "^10.0.0",
     "@nestjs/core": "^10.0.0",
+    "@nestjs/mapped-types": "*",
     "@nestjs/platform-express": "^10.0.0",
-    "reflect-metadata": "^0.2.0",
-    "rxjs": "^7.8.1"
+    "reflect-metadata": "^0.2.1",
+    "rxjs": "^7.8.1",
+    "telegraf": "^4.16.3",
+    "tslog": "^4.9.2"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
