--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@nestjs/core": "^10.0.0",
     "@nestjs/mapped-types": "*",
     "@nestjs/platform-express": "^10.0.0",
+    "@prisma/client": "^5.10.2",
     "reflect-metadata": "^0.2.1",
     "rxjs": "^7.8.1",
     "telegraf": "^4.16.3",
