Добавлены изменения в класс TelegrafService для проверки доступа пользователя, добавлен OpenAI API

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,7 @@
 {
-  "cSpell.words": ["tslog"],
+  "cSpell.words": [
+    "Openai",
+    "tslog"
+  ],
   "github.copilot.chat.localeOverride": "ru"
 }
