--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@prisma/client": "^5.10.2",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
+    "openai": "^4.29.2",
     "reflect-metadata": "^0.2.1",
     "rxjs": "^7.8.1",
     "telegraf": "^4.16.3",
