Добавлены новые слова в cSpell, изменена локаль для GitHub Copilot и настройки доступности, добавлены аннотации HttpCode для методов контроллера, удалены неиспользуемые классы и методы, добавлена проверка доступа пользователя в TelegrafService

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,8 +1,13 @@
 {
   "cSpell.words": [
     "Openai",
+    "Pipes",
     "repost",
+    "successfully",
+    "telegram",
     "tslog"
   ],
-  "github.copilot.chat.localeOverride": "ru"
+  "github.copilot.chat.localeOverride": "ru",
+  "accessibility.voice.speechLanguage": "ru-RU",
+  "cSpell.language": "ru"
 }
