--- a/.gitignore
+++ b/.gitignore
@@ -57,3 +57,5 @@ pids
 # Diagnostic reports (https://nodejs.org/api/report.html)
 report.[0-9]*.[0-9]*.[0-9]*.[0-9]*.json
 db/bot.db
+resources/bot.db
+prisma/bot.db
