added the ability to receive voice messages

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,13 +1,18 @@
 {
   "cSpell.words": [
+    "audios",
+    "converter",
+    "covert",
     "Nest",
     "octet",
     "Openai",
     "Pipes",
     "repost",
+    "starting",
     "successfully",
     "telegram",
-    "tslog"
+    "tslog",
+    "typegram"
   ],
   "github.copilot.chat.localeOverride": "ru",
   "accessibility.voice.speechLanguage": "ru-RU",
