feat: Add support for converting voice messages to mp3 format

--- a/.gitignore
+++ b/.gitignore
@@ -59,3 +59,8 @@ report.[0-9]*.[0-9]*.[0-9]*.[0-9]*.json
 db/bot.db
 resources/bot.db
 prisma/bot.db
+
+#media
+.mp3
+audios/305343617.mp3
+audios/305343617.ogg
